docs-site/src/pages/pattern-lab/_patterns/10-visual-styles/00-color/_color-swatch.scss
.c-bolt-swatch {
  display: flex;
  flex: 1;
  flex-direction: column;
  justify-content: center;
  height: 100%; // So vertical centering works -- same update we had to make for cards since teaking how flex grid behaves
}

.c-bolt-swatch__color {
  display: block;

  &:not(.c-bolt-swatch__color--large) {
    padding: calc(var(--bolt-spacing-y-small) * 2) var(--bolt-spacing-x-small);
  }
}

.c-bolt-swatch__color:nth-last-child(n + 4)
  ~ .c-bolt-swatch__color:last-child:nth-child(even) {
  margin-bottom: auto;
}

.c-bolt-swatch__color--large {
  padding: var(--bolt-spacing-y-large) var(--bolt-spacing-x-small);

  &:first-child {
    margin-top: auto;
  }

  &:last-child {
    margin-bottom: auto;
  }
}

.c-bolt-swatch__text {
  display: flex;
  flex-flow: row wrap;
}

.c-bolt-swatch__meta {
  display: block;
  width: 100%;
  font-size: var(--bolt-type-font-size-xsmall);
  font-weight: var(--bolt-type-font-weight-bold);
  line-height: var(--bolt-type-line-height-xsmall);
  text-transform: uppercase;
}

.c-bolt-swatch__name {
  font-size: var(--bolt-type-font-size-large);
  font-weight: var(--bolt-type-font-weight-bold);
  line-height: var(--bolt-type-line-height-large);
}

.c-bolt-swatch__value {
  margin-left: auto;
  font-size: var(--bolt-type-font-size-large);
  font-weight: var(--bolt-type-font-weight-bold);
  line-height: var(--bolt-type-line-height-large);
  text-transform: uppercase;
}

.c-bolt-accessibility-table {
  padding: var(--bolt-spacing-y-xsmall) var(--bolt-spacing-x-small);
  border-radius: bolt-border-radius(large);

  &:not(:last-child) {
    margin-bottom: var(--bolt-spacing-y-small);
  }
}

.c-bolt-accessibility-table__table {
  margin-bottom: 0;
  margin-left: 0;
}

.c-bolt-accessibility-table__row {
  display: flex;
  flex-direction: row;
  align-items: center;
  position: relative;
  width: 100%;

  &:after {
    content: '';
    display: block;
    opacity: 0.3;
    position: absolute;
    right: 0;
    bottom: 0;
    left: 0;
    height: 1px;
    border-bottom-color: currentColor;
    border-bottom-style: solid;
    border-bottom-width: 1px;
  }

  &:last-child:after {
    display: none;
  }
}

.c-bolt-accessibility-table__column {
  display: block;
  align-items: center;
  margin: 0;
  padding-top: var(--bolt-spacing-y-xsmall);
  padding-bottom: var(--bolt-spacing-y-xsmall);
  font-size: var(--bolt-type-font-size-xsmall);
  line-height: var(--bolt-type-line-height-xsmall);
}

.c-bolt-accessibility-table__column:nth-child(1) {
  min-width: 70px;
}

.c-bolt-accessibility-table__title {
  padding: var(--bolt-spacing-y-medium) 0;
  font-size: var(--bolt-type-font-size-medium);
  font-weight: var(--bolt-type-font-weight-bold);
  line-height: var(--bolt-type-line-height-medium);
}

.c-bolt-accessibility-table__text--large {
  font-size: var(--bolt-type-font-size-xxlarge);
  font-weight: var(--bolt-type-font-weight-regular);
  line-height: 1;
}

.c-bolt-accessibility-table__text--medium {
  font-size: var(--bolt-type-font-size-large);
  font-weight: var(--bolt-type-font-weight-regular);
  line-height: 1;
}

.c-bolt-accessibility-table__column:nth-child(2),
.c-bolt-accessibility-table__column:nth-child(3) {
  display: flex;
  flex: 1;
  justify-content: flex-end;
  align-items: flex-end;
  align-self: flex-end;
  margin: 0 var(--bolt-spacing-x-xsmall);
  text-align: right;
}

.c-bolt-accessibility-table__results {
  display: inline-block;
  margin: 0;
  padding: 0;
  font-size: var(--bolt-type-font-size-small);
  color: bolt-color(gray, xdark);
  line-height: var(--bolt-type-line-height-small);
  border: solid 1px bolt-color(gray, light);
  border-radius: 4px;
  background-color: bolt-color(gray, light);
  white-space: nowrap;
  text-overflow: ellipsis;
}

.c-bolt-accessibility-table__results--aa18 {
  background-color: color(yellow);
}

.c-bolt-accessibility-table__results--fail {
  background-color: color(warning);
}

.c-bolt-accessibility-table__text {
  display: inline-block;
  margin-right: var(--bolt-spacing-x-xsmall);

  &:last-child {
    margin-right: 0;
  }
}

.c-bolt-accessibility-table__column--white {
  color: bolt-color(white);
}

.c-bolt-accessibility-table__column--black {
  color: bolt-color(black);
}

.c-bds-color-square {
  @include bolt-shadow('level-10');
  display: inline-flex;
  width: 0.8em;
  height: 0.8em;
  border-width: 1px;
  border-style: solid;
  border-color: bolt-theme(border, 0.2);
}

.c-bds-color-square--border {
  border-color: transparent;
  background-color: bolt-theme(border, 0.2);
}

.c-bds-color-square--text {
  background-color: bolt-theme(text);
}

.c-bds-color-square--background {
  background-color: bolt-theme(background);
}

.c-bds-color-square--primary {
  background-color: bolt-theme(primary);
}

.c-bds-color-square--secondary {
  background-color: bolt-theme(secondary);
}

.c-bds-color-square--link {
  background-color: bolt-theme(link);
}

.c-bds-color-square--text-disabled {
  background-color: bolt-theme(text-disabled);
}

.c-bds-color-square--disabled {
  background-color: bolt-theme(disabled);
}

.c-bds-color-square--headline {
  background-color: bolt-theme(headline);
}

.c-bds-color-square--headline-link {
  background-color: bolt-theme(headline-link);
}

.c-bds-color-square--neutral {
  background-color: bolt-theme(neutral);
}

